bindings/pascal/src/LibProven.pas


// ============================================================================
// SafeUrl (1 function, plus proven_url_free above)
// ============================================================================

// Parse a URL into components. Caller must free with proven_url_free.
function proven_url_parse(Ptr: PByte; Len: NativeUInt): TProvenUrlResult;
  cdecl; external 'proven';

// ============================================================================
// SafeCrypto (2 functions)
// ============================================================================

// Constant-time byte comparison (timing-attack safe).
function proven_crypto_constant_time_eq(
  Ptr1: PByte; Len1: NativeUInt;
  Ptr2: PByte; Len2: NativeUInt
): TProvenBoolResult; cdecl; external 'proven';

// Fill buffer with cryptographically secure random bytes.
function proven_crypto_random_bytes(Ptr: PByte; Len: NativeUInt): Int32;
  cdecl; external 'proven';

// ============================================================================
// SafeFloat (5 functions)
// ============================================================================

// Safe floating-point division.
function proven_float_div(A, B: Double): TProvenFloatResult;
  cdecl; external 'proven';

// Check if float is finite (not NaN or Inf).
function proven_float_is_finite(X: Double): ByteBool;
  cdecl; external 'proven';

// Check if float is NaN.
function proven_float_is_nan(X: Double): ByteBool;
  cdecl; external 'proven';

// Safe square root.
function proven_float_sqrt(X: Double): TProvenFloatResult;
  cdecl; external 'proven';

// Safe natural logarithm.
function proven_float_ln(X: Double): TProvenFloatResult;
  cdecl; external 'proven';

// ============================================================================
// SafeJson (2 functions)
// ============================================================================

// Check if string is valid JSON.
function proven_json_is_valid(Ptr: PByte; Len: NativeUInt): TProvenBoolResult;
  cdecl; external 'proven';

// Get JSON value type at root level.
function proven_json_get_type(Ptr: PByte; Len: NativeUInt): Int32;
  cdecl; external 'proven';

// ============================================================================
// SafeDateTime (4 functions)
// ============================================================================

// Parse ISO 8601 date string.
function proven_datetime_parse(Ptr: PByte; Len: NativeUInt): TProvenDateTimeResult;
  cdecl; external 'proven';

// Format DateTime as ISO 8601 string. Caller must free result.
function proven_datetime_format_iso8601(DT: TProvenDateTime): TProvenStringResult;
  cdecl; external 'proven';

// Check if year is a leap year.
function proven_datetime_is_leap_year(Year: Int32): ByteBool;
  cdecl; external 'proven';

// Get number of days in a month. Returns 0 if invalid.
function proven_datetime_days_in_month(Year: Int32; Month: Byte): Byte;
  cdecl; external 'proven';

// ============================================================================
// SafeVersion (2 functions, plus proven_version_free above)
// ============================================================================

// Parse semantic version string (e.g., "1.2.3-alpha").
function proven_version_parse(Ptr: PByte; Len: NativeUInt): TProvenVersionResult;
  cdecl; external 'proven';

// Compare two semantic versions. Negative if A < B, 0 if equal, positive if A > B.
function proven_version_compare(A, B: TProvenSemanticVersion): Int32;
  cdecl; external 'proven';

// ============================================================================
// SafeHex (2 functions, plus proven_hex_free above)
// ============================================================================

// Encode bytes to hex string. Caller must free result.
function proven_hex_encode(Ptr: PByte; Len: NativeUInt; Uppercase: ByteBool): TProvenStringResult;
  cdecl; external 'proven';

// Decode hex string to bytes. Caller must free with proven_hex_free.
function proven_hex_decode(Ptr: PByte; Len: NativeUInt): TProvenHexDecodeResult;
  cdecl; external 'proven';

// ============================================================================
// SafeChecksum (2 functions)
// ============================================================================

// Calculate CRC32 checksum.
function proven_checksum_crc32(Ptr: PByte; Len: NativeUInt): TProvenIntResult;
  cdecl; external 'proven';

// Verify CRC32 matches expected value.
function proven_checksum_verify_crc32(Ptr: PByte; Len: NativeUInt; Expected: UInt32): TProvenBoolResult;
  cdecl; external 'proven';

// ============================================================================
// SafeColor (3 functions)
// ============================================================================

// Parse hex color string (#RRGGBB or #RGB).
function proven_color_parse_hex(Ptr: PByte; Len: NativeUInt): TProvenColorResult;
  cdecl; external 'proven';

// Convert RGB to HSL.
function proven_color_rgb_to_hsl(RGB: TProvenRGBColor): TProvenHSLColor;
  cdecl; external 'proven';

// Format RGB as hex string ("#rrggbb"). Caller must free result.
function proven_color_to_hex(RGB: TProvenRGBColor): TProvenStringResult;
  cdecl; external 'proven';

// ============================================================================
// SafeAngle (4 functions)
// ============================================================================

// Convert degrees to radians.
function proven_angle_deg_to_rad(Degrees: Double): Double;
  cdecl; external 'proven';

// Convert radians to degrees.
function proven_angle_rad_to_deg(Radians: Double): Double;
  cdecl; external 'proven';

// Normalize angle to [0, 360) degrees.
function proven_angle_normalize_degrees(Degrees: Double): Double;
  cdecl; external 'proven';

// Normalize angle to [0, 2*pi) radians.
function proven_angle_normalize_radians(Radians: Double): Double;
  cdecl; external 'proven';

// ============================================================================
// SafeCalculator (1 function)
// ============================================================================

// Evaluate an arithmetic expression safely.
function proven_calculator_eval(Ptr: PByte; Len: NativeUInt): TProvenFloatResult;
  cdecl; external 'proven';

// ============================================================================
// SafeProbability (4 functions)
// ============================================================================

// Create probability value (clamped to [0, 1]).
function proven_probability_create(Value: Double): Double;
  cdecl; external 'proven';

// Multiply probabilities (independent events).
function proven_probability_and(A, B: Double): Double;
  cdecl; external 'proven';

// Add probabilities (mutually exclusive events, clamped to 1.0).
function proven_probability_or_exclusive(A, B: Double): Double;
  cdecl; external 'proven';

// Complement probability (1 - P).
function proven_probability_not(P: Double): Double;
  cdecl; external 'proven';

implementation

end.
